# order-API

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt  run.py  setup.cfg
.42c/: conf.yaml
.42c/scan/chronos-scheduler-api/: scanconf.json
app/: __init__.py  config.py  main.py
app/controller/: jobs_controller.py
app/models/: jobs.py
app/routes/: jobs_routes.py
app/services/: job_services.py
app/specification/: openapi.yaml
cp_api/: auth.py  config.py  dependencies.py  main.py
cp_api/controller/: jobs_controller.py
specification/: openapi.yaml
specification/static/: swagger.html
tests/: conftest.py  test_api.py  test_job_controller.py  test_jobs.py
