[metadata]
name = cp_api
version = 0.1.0
description = Flask REST interface for Chronos Scheduler
author = Your Name
author_email = you@example.com
license = MIT

[options]
package_dir =
    = .
packages = find:
install_requires =
    flask
    flask-swagger-ui
    flask-cors
    pydantic
    cp_lib @ git+https://github.com/dM1307/Order-lib.git@add-api-logic#egg=cp_lib
python_requires = >=3.9

[options.packages.find]
where = .

[flake8]
max-line-length = 88
exclude = venv,__pycache__,.git

[pylint.'MASTER']
ignore = migrations
